--- a/syntax.css
+++ b/syntax.css
@@ -1,14 +1,24 @@
-#header {
-    posiction: absolute;
-    top: 0;
-    left: 0;
-}
-
-#header h1 {
-    font-size: 32px;
-}
 /*This is good*/
 p {
-    font-size: 18px;
-    color:blue;
+    font-size: 12px;
+    color: rgb(255, 0, 0);
+}
+
+a {
+    text-decoration: underline;
+    color: blue;
+}
+
+span{
+    text-transform: uppercase;
+
+}
+
+h1{
+ font-size: 32px;   
+}
+
+div{
+    width: 100%;
+    backgroud: grey;
 }
