--- a/syntax.css
+++ b/syntax.css
@@ -1,6 +1,3 @@
-p, a, span, li{
-    color:red;
-    font-size: 30px;
-    font-style: bold;
-    font-family: Arial, Helvetica, sans-serif;
+#all-articles h2 + p{
+    color: green;
 }
